# agent-x

./: .cursorignore  .env  .gitignore  README.md  constraints.txt  main.py  notes.txt  pyproject.toml  requirements.txt
.cursor/rules/: agent-response-mode.mdc  project-guide.mdc  project-intial-data-index.mdc  project-structure.mdc
agent_tasks/: base_agent_documentation.task  search_agent_documentation.task
agent_x.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents/: __init__.py  base_agent.py  llm_config.py  search_agent.py
config/: settings.py
documentations/: base_agent_documentation.md  search_agent_documentation.md
tasks/agents_test/: __init__.py  search_agent_test.py
utils/: __init__.py  brave_search_tool.py  tools.py
