[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agent-x"
version = "0.1.0"
description = "A modular team of autonomous agents"
authors = ["Moti Elmakayes"]
packages = [
    {include = "agents"},
    {include = "utils"},
    {include = "tasks"},
    {include = "config"},
    {include = "prompts"}
]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
crewai = "0.114.0"
pydantic = "^2.10.0"
pydantic-ai = {version = "^0.1.3", extras = ["logfire", "examples"]}
langchain = "^0.1.0"
openai = "^1.74.0"
tiktoken = "^0.7.0"
python-dotenv = "^1.0.1"
rich = "^13.9.4"
instructor = "^1.5.2"
typer = "^0.15.2"
gradio = "^5.26.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.setuptools]
packages = ["agents", "utils", "tasks", "config", "prompts"] 